<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>camera_rtsp_streamer</name>
  <version>0.0.0</version>
  <description>ROS 2 package for streaming RTSP camera feeds as sensor_msgs/Image messages</description>
  <maintainer email="todo@todo.todo">Haroon Rasheed</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
